examples/test/testpolicy11816.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11816
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key47: value37
      key38: value17
      key9: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value41
      podSelector:
        matchLabels:
          key46: value22
          key17: value42
